--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="item">Personagens</li>
                     <li class="item">Vídeos</li>
                     <li class="item">Jogos</li>
-                    <li class="item">Filme</li>
+                    <li class="item">Filmes</li>
                     <li class="item">Novidades</li>
                     <!-- <li><i class="fab fa-facebook"></i></li>
                 <li><i class="fa fa-car"></i></li> -->
